--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "cypress": "cypress open"
   },
   "dependencies": {
-    "@prisma/client": "^4.16.0",
+    "@auth/prisma-adapter": "^1.0.1",
+    "@next-auth/prisma-adapter": "^0.4.4-canary.81",
+    "@prisma/client": "^4.16.2",
     "@tanstack/react-query": "^4.29.14",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
@@ -35,7 +37,7 @@
     "@tanstack/eslint-plugin-query": "^4.29.9",
     "@types/jest": "^29.5.2",
     "prettier": "^2.8.8",
-    "prisma": "^4.16.0",
+    "prisma": "^4.16.2",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1"
   },
