--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.1",
-    "@next-auth/prisma-adapter": "^0.4.4-canary.81",
-    "@prisma/client": "^5.0.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@tanstack/react-query": "^4.29.14",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
@@ -21,8 +20,6 @@
     "bcrypt": "^5.1.0",
     "eslint": "8.41.0",
     "eslint-config-next": "^13.4.6",
-    "mongodb": "^5.5.0",
-    "mongoose": "^7.2.2",
     "next": "^13.4.6",
     "postcss": "8.4.24",
     "react": "^18.2.0",
@@ -35,6 +32,7 @@
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^4.29.9",
     "@types/jest": "^29.5.2",
+    "@types/next-auth": "^3.15.0",
     "prettier": "^2.8.8",
     "prisma": "^5.0.0",
     "ts-jest": "^29.1.0",
