--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@tanstack/react-query": "^4.29.14",
     "@types/node": "20.2.5",
-    "@types/react": "18.2.7",
+    "@types/react": "^18.2.15",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
@@ -27,7 +27,7 @@
     "react-query": "^3.39.3",
     "react-share": "^4.4.1",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "^5.1.6"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^4.29.9",
